--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-<<<<<<< HEAD
-        android:theme="@style/AppTheme"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         android:usesCleartextTraffic="true">
         <activity android:name=".ui.WalkThroughActivity"></activity>
-        <activity android:name=".ui.MainActivity">
-=======
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
-        <activity android:name=".ui.TournamentCreateActivity" >
-        </activity>
+        <activity android:name=".ui.TournamentCreateActivity" ></activity>
         <activity android:name=".ui.MainActivity" >
->>>>>>> cb63b7a126423c8b9f98fb947b3014f617fd3d24
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
