--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.yjy.idw" >
+    package="com.yjy.idw">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -13,15 +13,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.WalkThroughActivity"></activity>
-        <activity android:name=".ui.TournamentCreateActivity" ></activity>
-        <activity android:name=".ui.MainActivity" >
+        <activity
+            android:name=".ui.main.WalkThroughActivity"
+            android:label="@string/title_activity_walk_through"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.TournamentCreateActivity" />
+        <activity android:name=".ui.MainActivity"></activity>
     </application>
 
 </manifest>
