--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,9 @@ dependencies {
     /* Viewpager2 */
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
 
+    /* Indicator */
+    implementation 'me.relex:circleindicator:1.2.2'
+
     /* OkHttp3 */
     //implementation 'com.squareup.okhttp3:okhttp:4.7.2'
 
