--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name=".ui.main.WalkThroughActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/MyStyle">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
