[개발] 토너먼트 생성 몇 강인지 고르는 팝업 레이아웃 개발

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.RankingActivity"></activity>
+        <activity android:name=".ui.TournamentCreatePopupActivity"></activity>
+        <activity android:name=".ui.RankingActivity" />
         <activity
             android:name=".ui.main.WalkThroughActivity"
             android:theme="@style/MyStyle">
