--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.TournamentCreatePopupActivity"></activity>
+        <activity android:name=".ui.TournamentCreatePopupActivity" android:theme="@android:style/Theme.Dialog"></activity>
         <activity android:name=".ui.RankingActivity" />
         <activity
             android:name=".ui.main.WalkThroughActivity"
